<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cmt.taxcalculator.EMIActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_principal"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_interest"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/input_layout_tenure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_years"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_calculate2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="Calculate"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />


            <android.support.design.widget.TextInputLayout

                android:id="@+id/input_layout_emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/emi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_emi"
                    android:inputType="number"
                    android:maxEms="0"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/input_layout_total_Interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/interest_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_interest_total"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

